test/corpus/aggregate_windowed_function.txt
=====================================
agg_func avg
=====================================
SELECT AVG(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (avg_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func max
=====================================
SELECT MAX(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (max_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func min
=====================================
SELECT MIN(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (min_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func sum
=====================================
SELECT SUM(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (sum_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func stdev
=====================================
SELECT STDEV(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (stdev_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func stdevp
=====================================
SELECT STDEVP(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (stdevp_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func var
=====================================
SELECT VAR(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (var_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg_func varp
=====================================
SELECT VARP(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (varp_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg count
=====================================
SELECT COUNT(id) OVER (PARTITION BY baz) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (count_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg count_big
=====================================
SELECT COUNT_BIG(id) OVER (PARTITION BY baz) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (count_big_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))
                            (over_clause
                              (partition_by_clause
                                (expression_list_
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg checksum_agg
=====================================
SELECT CHECKSUM_AGG(id) FROM FOO
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (checksum_agg_)
                            (all_distinct_expression
                              (expression
                                (full_column_name
                                  (id_))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
agg APPROX_COUNT_DISTINCT
=====================================
SELECT APPROX_COUNT_DISTINCT(id)
FROM [StackOverflowTiny].[dbo].[Posts]
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (approx_count_distinct_)
                            (expression
                              (full_column_name
                                (id_)))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)
                        (id_)
                        (id_)))))))))))))

=====================================
agg STRING_AGG string_lit
=====================================
SELECT STRING_AGG(Type,',')
FROM [StackOverflowTiny].[dbo].[LinkTypes]
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (string_agg_)
                            (expression
                              (full_column_name
                                (id_)))
                            (seperator
                              (string_lit))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)
                        (id_)
                        (id_)))))))))))))

=====================================
agg STRING_AGG LOCAL
=====================================
SELECT STRING_AGG(Type,@sep)
FROM [StackOverflowTiny].[dbo].[LinkTypes]
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (aggregate_windowed_function
                            (string_agg_)
                            (expression
                              (full_column_name
                                (id_)))
                            (seperator
                              (local_id_))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)
                        (id_)
                        (id_)))))))))))))
